--- a/OpticalValleyUnite/Classes/UI/GeneralManagerMailbox/View/YQGeneralManagerReplyView.xib
+++ b/OpticalValleyUnite/Classes/UI/GeneralManagerMailbox/View/YQGeneralManagerReplyView.xib
@@ -12,10 +12,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="34l-ua-O6u" customClass="YQGeneralManagerReplyView" customModule="OpticalValleyUnite" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="397" height="220"/>
+            <rect key="frame" x="0.0" y="0.0" width="412" height="195"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="64a-p5-EGO">
-                    <rect key="frame" x="0.0" y="0.0" width="397" height="40"/>
+                    <rect key="frame" x="0.0" y="0.0" width="412" height="40"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="处理答复:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oFh-EJ-lQg">
                             <rect key="frame" x="15" y="10" width="74" height="21"/>
@@ -32,25 +32,36 @@
                     </constraints>
                 </view>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="B4K-xZ-xwk">
-                    <rect key="frame" x="0.0" y="40" width="397" height="120"/>
+                    <rect key="frame" x="0.0" y="40" width="412" height="100"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="120" id="byY-uW-HIz"/>
+                        <constraint firstAttribute="height" constant="100" id="byY-uW-HIz"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                            <real key="value" value="5"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                            <color key="value" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                            <real key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                 </textView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tIa-Pu-YpD">
-                    <rect key="frame" x="0.0" y="160" width="397" height="60"/>
+                    <rect key="frame" x="0.0" y="140" width="412" height="55"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qaq-rs-xPO">
-                            <rect key="frame" x="354.5" y="5" width="37.5" height="18"/>
+                            <rect key="frame" x="369.5" y="5" width="37.5" height="18"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LQ7-pa-xft">
-                            <rect key="frame" x="354" y="28" width="38" height="18"/>
+                            <rect key="frame" x="369" y="28" width="38" height="18"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -84,7 +95,7 @@
                 <outlet property="nameLabel" destination="Qaq-rs-xPO" id="SQ2-Q7-66o"/>
                 <outlet property="timeLabel" destination="LQ7-pa-xft" id="289-Tv-oku"/>
             </connections>
-            <point key="canvasLocation" x="21.5" y="2"/>
+            <point key="canvasLocation" x="29" y="-10.5"/>
         </view>
     </objects>
 </document>
